travis: run docker detached using bash option to get server log

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_install:
 - docker pull aerospike/aerospike-server
 script:
 - make lint-check
-- docker run -d -p 3000:3000 -p 3001:3001 -p 3002:3002 -p 3003:3003 aerospike/aerospike-server
+- docker run -p 3000:3000 -p 3001:3001 -p 3002:3002 -p 3003:3003 aerospike/aerospike-server &
 - make test
