--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ script:
 - make lint-check
 - docker run -p 3000:3000 -p 3001:3001 -p 3002:3002 -p 3003:3003 aerospike/aerospike-server &
 # Let service load
-- sleep 10
+- sleep 5
 - make test
+- make codecov
