--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ keywords = ["aerospike", "database", "asyncio", "nosql"]
 python = "^3.7"
 bcrypt = "^3.1"
 construct = "^2.9"
+msgpack = "^0.6.2"
 
 
 [tool.poetry.dev-dependencies]
